--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -269,9 +269,9 @@
 	var urlSwagger;
 	//Todos ambientes estão apontando para o trial. Não entendi por que precisaria apontar para procução
 	if (amb == 1) {
-		urlSwagger = "https://cdn.rawgit.com/devserpro/datavalid-basico/master/_layouts/swagger-datavalid-trial2.json";
+		urlSwagger = "https://rawgit.com/devserpro/datavalid-basico/master/_layouts/swagger-datavalid-final.json";
 	} else if (amb == 2) {
-		urlSwagger = "https://cdn.rawgit.com/devserpro/datavalid-basico/master/_layouts/swagger-datavalid-trial2.json";
+		urlSwagger = "https://rawgit.com/devserpro/datavalid-basico/master/_layouts/swagger-datavalid-final.json";
 	}
 	window.scrollTo(0, 0);
 	var jPopupDemo = new jPopup({
